Working on SIP Support
Added lib itself to the classpath


git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1105 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -92,6 +92,7 @@
 
     <path id="project.class.path">
         <pathelement location="${dest}"/>
+        <pathelement location="${lib}"/>
 
         <!-- Include all JAR files found in lib and any of its subdirectories. -->
         <fileset dir="${lib}">
