--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -155,7 +155,10 @@
                basedir="."
            izPackDir="${izpack.dir}/"/>
 
-        <exec dir="${windows.app.dir}/tmp" executable="${7zip.executable}" failifexecutionfails="false">
+        <zip destfile="${windows.app.dir}/setup-sip-communicator-${windows.app.ver}.zip"
+                basedir="${windows.app.dir}/tmp"/>
+
+        <!--exec dir="${windows.app.dir}/tmp" executable="${7zip.executable}" failifexecutionfails="false">
             <arg line="a -y data.7z *"/>
         </exec>
 
@@ -169,7 +172,7 @@
             <fileset dir="${windows.app.dir}/tmp">
                 <include name="data.7z"/>
             </fileset>
-      </concat>
+      </concat-->
 
         <!-- Delete the temp directory-->
         <delete dir="${windows.app.dir}/tmp"/>
