--- a/resources/install/installers.properties
+++ b/resources/install/installers.properties
@@ -5,6 +5,6 @@ izpack.dir=/opt/izpack
 # sip-communicator installation packages
 linux.jre.path=/opt/jre-install/j2re1.4.2_12
 
-# Path to the windows jre installer (offline or online ) to be
-# included in sip-communicator installation packages
+# Path to the windows jre installer (offline or online ) to
+# be included in sip-communicator installation packages
 windows.jre.file=/opt/jre-install/j2re-1_4_2_12-windows-i586-p-iftw.exe
