Added -windows to the name of the installation package.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1211 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -165,7 +165,7 @@
                basedir="${basedir}"
                izPackDir="${izpack.dir}/"/>
 
-        <zip destfile="${windows.app.dir}/sip-communicator-${windows.app.ver}.zip"
+        <zip destfile="${windows.app.dir}/sip-communicator-${windows.app.ver}-windows.zip"
                 basedir="${windows.app.dir}/tmp"/>
 
         <!--exec dir="${windows.app.dir}/tmp" executable="${7zip.executable}" failifexecutionfails="false">
