--- a/build.xml
+++ b/build.xml
@@ -532,8 +532,11 @@
         bundle-netaddr,bundle-netaddr-slick,bundle-slickless,
         bundle-slick-runner,bundle-sip,bundle-sip-slick,bundle-fileaccess,
         bundle-fileaccess-slick,bundle-media,bundle-media-slick,
-        bundle-protocol,bundle-icq,bundle-icq-slick,bundle-mock,bundle-swing-ui,
-        meta-contactlist,meta-contactlist-slick,bundle-plugin-icqaccregwizz"/>
+        bundle-protocol,bundle-icq,bundle-icq-slick,bundle-mock,
+        bundle-jabber,bundle-swing-ui,
+        meta-contactlist,meta-contactlist-slick,
+        bundle-plugin-icqaccregwizz,bundle-plugin-jabberaccregwizz"/>
+        <!-- bundle-jabber-slick -->
 
     <!--BUNDLE-HISTORY-->
     <target name="bundle-history">
@@ -756,7 +759,7 @@ javax.swing.event, javax.swing.border"/>
 
     <!-- BUNDLE-PROTOCOL -->
     <target name="bundle-protocol">
-        <!-- Creates a bundle containing the icq impl of the protocol provider."-->
+        <!-- Creates a bundle containing the protocol provider interfaces."-->
         <jar compress="false" destfile="${bundles.dest}/protocol.jar"
             manifest="src/net/java/sip/communicator/service/protocol/protocol.provider.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/service/protocol"
@@ -802,6 +805,33 @@ javax.swing.event, javax.swing.border"/>
         </jar>
     </target>
 
+    <!-- BUNDLE-JABBER -->
+    <target name="bundle-jabber">
+        <!-- Creates a bundle containing the jabber impl of the protocol provider."-->
+        <jar compress="false" destfile="${bundles.dest}/protocol-jabber.jar"
+            manifest="src/net/java/sip/communicator/impl/protocol/jabber/jabber.provider.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/protocol/jabber"
+                prefix="net/java/sip/communicator/impl/protocol/jabber"/>
+            <zipfileset src="${lib}/smack.jar" prefix=""/>
+            <zipfileset src="${lib}/smackx.jar" prefix=""/>
+        </jar>
+    </target>
+
+    <!-- BUNDLE-JABBER-SLICK -->
+    <!-- Creates a bundle containing the slick for the Jabber protocol provider."
+    <target name="bundle-jabber-slick">
+
+        <jar compress="false" destfile="${bundles.dest}/protocol-jabber-slick.jar"
+            manifest="test/net/java/sip/communicator/slick/protocol/jabber/jabber.provider.slick.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/jabber"
+                prefix="net/java/sip/communicator/slick/protocol/jabber"/>
+            <zipfileset src="${lib}/smack.jar" prefix=""/>
+            <zipfileset src="${lib}/smackx.jar" prefix=""/>
+        </jar>
+    </target>
+    -->
+
+
      <!-- BUNDLE-SWING-UI -->
     <target name="bundle-swing-ui">
         <!-- Bundle sip-communicator's UI."-->
@@ -838,11 +868,22 @@ javax.swing.event, javax.swing.border"/>
 
     <!-- BUNDLE-PLUGIN-ICQACCREGWIZZ -->
     <target name="bundle-plugin-icqaccregwizz">
-        <!-- Creates a bundle for the pligon Icq Account Registration Wizard."-->
+        <!-- Creates a bundle for the plugin Icq Account Registration Wizard."-->
         <jar compress="false" destfile="${bundles.dest}/icqaccregwizz.jar"
             manifest="src/net/java/sip/communicator/plugin/icqaccregwizz/icqaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/icqaccregwizz"
                 prefix="net/java/sip/communicator/plugin/icqaccregwizz"/>
         </jar>
     </target>
+
+    <!-- BUNDLE-PLUGIN-JABBERACCREGWIZZ -->
+    <target name="bundle-plugin-jabberaccregwizz">
+        <!-- Creates a bundle for the plugin Jabber Account Registration Wizard."-->
+        <jar compress="false" destfile="${bundles.dest}/jabberaccregwizz.jar"
+            manifest="src/net/java/sip/communicator/plugin/jabberaccregwizz/jabberaccregwizz.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/plugin/jabberaccregwizz"
+                prefix="net/java/sip/communicator/plugin/jabberaccregwizz"/>
+        </jar>
+    </target>
+
 </project>
