--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -28,6 +28,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  net.java.stun4j.client; \
  net.java.stun4j.StunAddress; \
  net.java.stun4j.StunException; \
+ javax.net.ssl; \
  edu.stanford.ejalbert; \
  edu.stanford.ejalbert.exception; \
  edu.stanford.ejalbert.exceptionhandler;
@@ -47,6 +48,7 @@ oscar.auto.start.3= \
  file:sc-bundles/protocol.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/protocol-icq.jar \
+ file:sc-bundles/protocol-jabber.jar \
  file:sc-bundles/netaddr.jar \
  file:sc-bundles/meta-cl.jar
 
@@ -59,7 +61,8 @@ oscar.auto.start.4= \
  file:sc-bundles/swing-ui.jar
 
  oscar.auto.start.67= \
- file:sc-bundles/icqaccregwizz.jar
+ file:sc-bundles/icqaccregwizz.jar \
+ file:sc-bundles/jabberaccregwizz.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
