--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -46,6 +46,7 @@ oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
+ file:sc-bundles/protocol-jabber.jar \
  file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/meta-cl.jar \
@@ -64,6 +65,8 @@ oscar.auto.start.5= \
  file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/protocol-sip-slick.jar \
  file:sc-bundles/msghistory-slick.jar
+
+# file:sc-bundles/protocol-jabber-slick.jar \
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
