<No Comment Entered>
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1330 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/accounts.properties.template
+++ b/lib/accounts.properties.template
@@ -103,10 +103,14 @@ accounts.sip.account2.PROXY_PORT=
 accounts.jabber.account1.USER_ID=
 # The password of the first tested account
 accounts.jabber.account1.PASSWORD=
+# The server to be used from account 1
+accounts.jabber.account1.SERVER_ADDRESS=
 # The address of the second tested account
 accounts.jabber.account2.USER_ID=
 # The password of the second tested account
 accounts.jabber.account2.PASSWORD=
+# The server to be used from account 2
+accounts.jabber.account2.SERVER_ADDRESS=
 # The contact list that will be created and will be tested is it created OK.
 # The value of the CONTACT_LIST property
 # must be a space separated string containing elements each of which is in the
