fix some commits by mistake
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1331 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/accounts.properties.template
+++ b/lib/accounts.properties.template
@@ -105,15 +105,19 @@ accounts.jabber.account1.USER_ID=
 accounts.jabber.account1.PASSWORD=
 # The server to be used from account 1
 accounts.jabber.account1.SERVER_ADDRESS=
+# The server port to be used from account 1
+accounts.jabber.account1.SERVER_PORT=
 # The address of the second tested account
 accounts.jabber.account2.USER_ID=
 # The password of the second tested account
 accounts.jabber.account2.PASSWORD=
 # The server to be used from account 2
 accounts.jabber.account2.SERVER_ADDRESS=
+# The server port to be used from account 2
+accounts.jabber.account2.SERVER_PORT=
 # The contact list that will be created and will be tested is it created OK.
 # The value of the CONTACT_LIST property
 # must be a space separated string containing elements each of which is in the
 # format: GroupName.ADDRESS
-accounts.jabber.CONTACT_LIST=test-group.damencho@gmail.com test-group.damenchodev2@gmail.com
-accounts.reporting.JABBER_REPORT_LIST=damencho@gmail.com
+accounts.jabber.CONTACT_LIST=
+accounts.reporting.JABBER_REPORT_LIST=
