--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -2,20 +2,16 @@
 # environment when running automated testing.
 
 # A list of all tests that should be run by the test target of the project.
-#test.list=ConfigurationServiceLick \
-# MediaServiceLick \
-# NetworkAddressManagerServiceLick \
-# FileAccessServiceLick \
-# HistoryServiceLick \
-# SlicklessTests \
-# MetaContactListServiceLick \
-# IcqProtocolProviderSlick \
-# SipProtocolProviderServiceLick \
-# MsgHistoryServiceLick
-
-test.list=JabberProtocolProviderSlick
-
-
+test.list=ConfigurationServiceLick \
+ MediaServiceLick \
+ NetworkAddressManagerServiceLick \
+ FileAccessServiceLick \
+ HistoryServiceLick \
+ SlicklessTests \
+ MetaContactListServiceLick \
+ IcqProtocolProviderSlick \
+ SipProtocolProviderServiceLick \
+ MsgHistoryServiceLick
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
