prevent compiler from seeing non-java source files to eliminate many ant "dont know how to handle it!" messages when in debug mode.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1345 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -129,6 +129,7 @@
             source="1.4" target="1.4">
             <src path="${src}"/>
             <src path="${src2}"/>
+            <include name="**/*.java" />
         </javac>
     </target>
 
